docs/api/qiskit/0.19/qiskit.providers.models.PulseBackendConfiguration.md
---
title: PulseBackendConfiguration
description: API reference for qiskit.providers.models.PulseBackendConfiguration
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.models.PulseBackendConfiguration
---

# PulseBackendConfiguration

<span id="qiskit.providers.models.PulseBackendConfiguration" />

`PulseBackendConfiguration(backend_name, backend_version, n_qubits, basis_gates, gates, local, simulator, conditional, open_pulse, memory, max_shots, coupling_map, n_uchannels, u_channel_lo, meas_levels, qubit_lo_range, meas_lo_range, dt, dtm, rep_times, meas_kernels, discriminators, hamiltonian=None, channel_bandwidth=None, acquisition_latency=None, conditional_latency=None, meas_map=None, max_experiments=None, sample_name=None, n_registers=None, register_map=None, configurable=None, credits_required=None, online_date=None, display_name=None, description=None, tags=None, channels=None, **kwargs)`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/providers/models/backendconfiguration.py "view source code")

Static configuration state for an OpenPulse enabled backend. This contains information about the set up of the device which can be useful for building Pulse programs.

Initialize a backend configuration that contains all the extra configuration that is made available for OpenPulse backends.

**Parameters**

*   **backend\_name** (`str`) – backend name.
*   **backend\_version** (`str`) – backend version in the form X.Y.Z.
*   **n\_qubits** (`int`) – number of qubits.
*   **basis\_gates** (`List`\[`str`]) – list of basis gates names on the backend.
*   **gates** ([`GateConfig`](qiskit.providers.models.GateConfig "qiskit.providers.models.backendconfiguration.GateConfig")) – list of basis gates on the backend.
*   **local** (`bool`) – backend is local or remote.
*   **simulator** (`bool`) – backend is a simulator.
*   **conditional** (`bool`) – backend supports conditional operations.
*   **open\_pulse** (`bool`) – backend supports open pulse.
*   **memory** (`bool`) – backend supports memory.
*   **max\_shots** (`int`) – maximum number of shots supported.
*   **coupling\_map** (*list*) – The coupling map for the device
*   **n\_uchannels** (`int`) – Number of u-channels.
*   **u\_channel\_lo** (`List`\[`List`\[[`UchannelLO`](qiskit.providers.models.UchannelLO "qiskit.providers.models.backendconfiguration.UchannelLO")]]) – U-channel relationship on device los.
*   **meas\_levels** (`List`\[`int`]) – Supported measurement levels.
*   **qubit\_lo\_range** (`List`\[`List`\[`float`]]) – Qubit lo ranges for each qubit with form (min, max) in GHz.
*   **meas\_lo\_range** (`List`\[`List`\[`float`]]) – Measurement lo ranges for each qubit with form (min, max) in GHz.
*   **dt** (`float`) – Qubit drive channel timestep in nanoseconds.
*   **dtm** (`float`) – Measurement drive channel timestep in nanoseconds.
*   **rep\_times** (`List`\[`float`]) – Supported repetition times for device in microseconds.
*   **meas\_kernels** (`List`\[`str`]) – Supported measurement kernels.
*   **discriminators** (`List`\[`str`]) – Supported discriminators.
*   **hamiltonian** (`Optional`\[`Dict`\[`str`, `str`]]) – An optional dictionary with fields characterizing the system hamiltonian.
*   **channel\_bandwidth** (*list*) – Bandwidth of all channels (qubit, measurement, and U)
*   **acquisition\_latency** (*list*) – Array of dimension n\_qubits x n\_registers. Latency (in units of dt) to write a measurement result from qubit n into register slot m.
*   **conditional\_latency** (*list*) – Array of dimension n\_channels \[d->u->m] x n\_registers. Latency (in units of dt) to do a conditional operation on channel n from register slot m
*   **meas\_map** (*list*) – Grouping of measurement which are multiplexed
*   **max\_experiments** (*int*) – The maximum number of experiments per job
*   **sample\_name** (*str*) – Sample name for the backend
*   **n\_registers** (*int*) – Number of register slots available for feedback (if conditional is True)
*   **register\_map** (*list*) – An array of dimension n\_qubits X n\_registers that specifies whether a qubit can store a measurement in a certain register slot.
*   **configurable** (*bool*) – True if the backend is configurable, if the backend is a simulator
*   **credits\_required** (*bool*) – True if backend requires credits to run a job.
*   **online\_date** (*datetime*) – The date that the device went online
*   **display\_name** (*str*) – Alternate name field for the backend
*   **description** (*str*) – A description for the backend
*   **tags** (*list*) – A list of string tags to describe the backend
*   **channels** (`Optional`\[`Dict`\[`str`, `Any`]]) – An optional dictionary containing information of each channel – their purpose, type, and qubits operated on.
*   **\*\*kwargs** – Optional fields.

## Attributes

### num\_qubits

Returns the number of qubits.

In future, n\_qubits should be replaced in favor of num\_qubits for consistent use throughout Qiskit. Until this is properly refactored, this property serves as intermediate solution.

### sample\_rate

<span id="qiskit.providers.models.PulseBackendConfiguration.sample_rate" />

`float`

Sample rate of the signal channels in Hz (1/dt).

**Return type**

`float`

## Methods

### acquire

<span id="qiskit.providers.models.PulseBackendConfiguration.acquire" />

`PulseBackendConfiguration.acquire(qubit)`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/providers/models/backendconfiguration.py "view source code")

Return the acquisition channel for the given qubit.

**Raises**

**BackendConfigurationError** – If the qubit is not a part of the system.

**Return type**

[`AcquireChannel`](qiskit.pulse.channels#qiskit.pulse.channels.AcquireChannel "qiskit.pulse.channels.AcquireChannel")

**Returns**

Qubit measurement acquisition line.

### control

<span id="qiskit.providers.models.PulseBackendConfiguration.control" />

`PulseBackendConfiguration.control(qubits=None, channel=None)`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/providers/models/backendconfiguration.py "view source code")

Return the secondary drive channel for the given qubit – typically utilized for controlling multiqubit interactions. This channel is derived from other channels.

**Parameters**

*   **qubits** (`Optional`\[`Iterable`\[`int`]]) – Tuple or list of qubits of the form (control\_qubit, target\_qubit).
*   **channel** (`Optional`\[`int`]) – Deprecated.

**Raises**

**BackendConfigurationError** – If the `qubits` is not a part of the system or if the backend does not provide channels information in its configuration.

**Return type**

`List`\[[`ControlChannel`](qiskit.pulse.channels#qiskit.pulse.channels.ControlChannel "qiskit.pulse.channels.ControlChannel")]

**Returns**

List of control channels.

### describe

<span id="qiskit.providers.models.PulseBackendConfiguration.describe" />

`PulseBackendConfiguration.describe(channel)`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/providers/models/backendconfiguration.py "view source code")

Return a basic description of the channel dependency. Derived channels are given weights which describe how their frames are linked to other frames. For instance, the backend could be configured with this setting:

```python
u_channel_lo = [
    [UchannelLO(q=0, scale=1. + 0.j)],
    [UchannelLO(q=0, scale=-1. + 0.j), UchannelLO(q=1, scale=1. + 0.j)]
]
```

Then, this method can be used as follows:

```python
backend.configuration().describe(ControlChannel(1))
>>> {DriveChannel(0): -1, DriveChannel(1): 1}
```

**Parameters**

**channel** ([`ControlChannel`](qiskit.pulse.channels#qiskit.pulse.channels.ControlChannel "qiskit.pulse.channels.ControlChannel")) – The derived channel to describe.

**Raises**

**BackendConfigurationError** – If channel is not a ControlChannel.

**Return type**

`Dict`\[[`DriveChannel`](qiskit.pulse.channels#qiskit.pulse.channels.DriveChannel "qiskit.pulse.channels.DriveChannel"), `complex`]

**Returns**

Control channel derivations.

### drive

<span id="qiskit.providers.models.PulseBackendConfiguration.drive" />

`PulseBackendConfiguration.drive(qubit)`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/providers/models/backendconfiguration.py "view source code")

Return the drive channel for the given qubit.

**Raises**

**BackendConfigurationError** – If the qubit is not a part of the system.

**Return type**

[`DriveChannel`](qiskit.pulse.channels#qiskit.pulse.channels.DriveChannel "qiskit.pulse.channels.DriveChannel")

**Returns**

Qubit drive channel.

### from\_dict

<span id="qiskit.providers.models.PulseBackendConfiguration.from_dict" />

`classmethod PulseBackendConfiguration.from_dict(data)`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/providers/models/backendconfiguration.py "view source code")

Create a new GateConfig object from a dictionary.

**Parameters**

**data** (*dict*) – A dictionary representing the GateConfig to create. It will be in the same format as output by [`to_dict()`](qiskit.providers.models.PulseBackendConfiguration#to_dict "qiskit.providers.models.PulseBackendConfiguration.to_dict").

**Returns**

The GateConfig from the input dictionary.

**Return type**

[GateConfig](qiskit.providers.models.GateConfig "qiskit.providers.models.GateConfig")

### get\_channel\_qubits

<span id="qiskit.providers.models.PulseBackendConfiguration.get_channel_qubits" />

`PulseBackendConfiguration.get_channel_qubits(channel)`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/providers/models/backendconfiguration.py "view source code")

Return a list of indices for qubits which are operated on directly by the given `channel`.

**Raises**

**BackendConfigurationError** – If `channel` is not a found or if the backend does not provide channels information in its configuration.

**Return type**

`List`\[`int`]

**Returns**

List of qubits operated on my the given `channel`.

### get\_qubit\_channels

<span id="qiskit.providers.models.PulseBackendConfiguration.get_qubit_channels" />

`PulseBackendConfiguration.get_qubit_channels(qubit)`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/providers/models/backendconfiguration.py "view source code")

Return a list of channels which operate on the given `qubit`.

**Raises**

**BackendConfigurationError** – If `qubit` is not a found or if the backend does not provide channels information in its configuration.

**Return type**

`List`\[[`Channel`](qiskit.pulse.channels#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel")]

**Returns**

List of `Channel`s operated on my the given `qubit`.

### measure

<span id="qiskit.providers.models.PulseBackendConfiguration.measure" />

`PulseBackendConfiguration.measure(qubit)`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/providers/models/backendconfiguration.py "view source code")

Return the measure stimulus channel for the given qubit.

**Raises**

**BackendConfigurationError** – If the qubit is not a part of the system.

**Return type**

[`MeasureChannel`](qiskit.pulse.channels#qiskit.pulse.channels.MeasureChannel "qiskit.pulse.channels.MeasureChannel")

**Returns**

Qubit measurement stimulus line.

### to\_dict

<span id="qiskit.providers.models.PulseBackendConfiguration.to_dict" />

`PulseBackendConfiguration.to_dict()`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/providers/models/backendconfiguration.py "view source code")

Return a dictionary format representation of the GateConfig.

**Returns**

The dictionary form of the GateConfig.

**Return type**

dict

